--- a/src/pages/components/file-uploader/style.mdx
+++ b/src/pages/components/file-uploader/style.mdx
@@ -24,7 +24,7 @@ file" button.
 <Row>
 <Column colLg={8}>
 
-![Examples of file loader](images/file-uploader-style-1.png))
+![Examples of file loader](images/file-uploader-style-1.png)
 
 </Column>
 </Row>
@@ -51,7 +51,7 @@ active state for `.bx--file__state-container` loading status.
 <Row>
 <Column colLg={12}>
 
-![Examples of file loader file states](images/file-uploader-style-2.png))
+![Examples of file loader file states](images/file-uploader-style-2.png)
 
 </Column>
 </Row>
@@ -61,7 +61,7 @@ active state for `.bx--file__state-container` loading status.
 <Row>
 <Column colLg={8}>
 
-![Examples of drag and drop file uploader states](images/file-uploader-style-3.png))
+![Examples of drag and drop file uploader states](images/file-uploader-style-3.png)
 
 </Column>
 </Row>
