--- a/src/pages/components/file-uploader/style.mdx
+++ b/src/pages/components/file-uploader/style.mdx
@@ -45,8 +45,8 @@ active state for `.bx--file__state-container` loading status.
 | `.bx--form-requirement__supplement`    | text color | `$text-01`        |
 | `.bx--form-requirement`                | border-top | `$ui-03`          |
 | `.bx--file--label--disabled`           | text color | `$disabled-02`    |
-| `.bx--file__drop-container: disabled`  | text color | `$disbaled-02`    |
-| `.bx--file__drop-container: disabled`  | border     | `$disbaled-02`    |
+| `.bx--file__drop-container: disabled`  | text color | `$disabled-02`    |
+| `.bx--file__drop-container: disabled`  | border     | `$disabled-02`    |
 
 <Row>
 <Column colLg={8}>
