--- a/src/pages/components/UI-shell-header/style.mdx
+++ b/src/pages/components/UI-shell-header/style.mdx
@@ -47,14 +47,14 @@ Shell is from the
 | Class                           | Property         | Color value    |
 | ------------------------------- | ---------------- | -------------- |
 | `.bx--header__menu-item`        | text color       | Gray 30        |
-| `.bx--header__menu-item`        | svg              | Gray 30        |
+| `.bx--header__menu-item`        | fill             | Gray 30        |
 | `.bx--header__menu-item:hover`  | background color | Gray 100-hover |
 | `.bx--header__menu-item:hover`  | text color       | Gray 10        |
-| `.bx--header__menu-item:hover`  | svg              | Gray 10        |
+| `.bx--header__menu-item:hover`  | fill             | Gray 10        |
 | `.bx--header__menu-item:focus`  | border           | White          |
 | `.bx--header__menu-item:active` | background color | Gray 80        |
 | `.bx--header__menu-item:active` | text color       | Gray 10        |
-| `.bx--header__menu-item:active` | svg              | Gray 10        |
+| `.bx--header__menu-item:active` | fill             | Gray 10        |
 
 <Row>
 <Column colLg={8}>
@@ -86,12 +86,15 @@ Shell is from the
 
 | Class                        | Property         | Color value    |
 | ---------------------------- | ---------------- | -------------- |
-| `.bx--header__action`        | fill             | Gray 30        |
+| `.bx--header__action`        | fill             | Gray 10        |
 | `.bx--header__action:hover`  | background color | Gray 100-hover |
-| `.bx--header__action:hover`  | fill             | Gray 10        |
+| `.bx--header__action:hover`  | fill             | White          |
 | `.bx--header__action:focus`  | border           | White          |
 | `.bx--header__action:active` | background color | Gray 80        |
-| `.bx--header__action:active` | fill             | Gray 10        |
+| `.bx--header__action:active` | fill             | White          |
+| `.bx--header__action:selected` | background color | Gray 100     |
+| `.bx--header__action:selected` | border         | Gray 80        |
+| `.bx--header__action:selected` | fill            | White          |
 
 <Row>
 <Column colLg={8}>
