docs(date picker): audit fixes

--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -21,7 +21,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | `.bx--date-picker__input` <br/> `.bx--text-input--light` | background-color | `$field-02` |
 | `.bx--date-picker__input`                                | border-bottom    | `$ui-04`    |
 | `.bx--date-picker__input`                                | text color       | `$text-01`  |
-| `:placeholder`                                           | text color       | `$text-03`  |
+| `:placeholder`                                           | text color       | `$text-05`  |
 | `.bx--date-picker__icon`                                 | color            | `$icon-01`  |
 
 <br />
@@ -90,33 +90,39 @@ any proper nouns capitalized, and no more than three words.
 
 ## Structure
 
-### Simple date input
+### Date inputs
 
-| Class                     | Property                    | px / rem | Spacing token |
-| ------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--label`              | padding-bottom              | 8 / 0.5  | `$spacing-03` |
-| `.bx--date-picker__input` | height                      | 40 / 2.5 | –             |
-| `.bx--date-picker__input` | border-bottom               | 1px      | -             |
-| `.bx--date-picker__input` | padding-left, padding-right | 16 / 1   | `$spacing-05` |
+The widths of the date inputs may vary based on the grid and layout.
+
+| Class                         | Property                    | px / rem | Spacing token |
+| ----------------------------- | --------------------------- | -------- | ------------- |
+| `.bx--label`                  | padding-bottom              | 8 / 0.5  | `$spacing-03` |
+| `.bx--date-picker__input`     | padding-left, padding-right | 16 / 1   | `$spacing-05` |
+| `.bx--date-picker__input`     | border-bottom               | 1px      | -             |
+| `.bx--date-picker__input`     | height                      | 40 / 2.5 | –             |
+| `.bx--date-picker__input--xl` | height                      | 48 / 3   | –             |
+| `.bx--date-picker__input--sm` | height                      | 32 / 2   | –             |
 
 <div className="image--fixed">
 
-![Structure for simple and single date pickers](images/date-picker-style-4.png)
+![Structure for date picker inputs](images/date-picker-style-4.png)
 
 </div>
 
-<Caption>
-  Structure and spacing for simple and single date pickers | px / rem
-</Caption>
+<Caption>Structure and spacing for date picker inputs | px / rem</Caption>
 
-### Calendar date pickers
+<div className="image--fixed">
+
+![Sizes for date picker inputs](images/date-picker-style-5.png)
+
+</div>
+
+<Caption>Sizes for date picker inputs | px / rem</Caption>
+
+### Calendar menu
 
 | Class                        | Property                                 | px / rem | Spacing token |
 | ---------------------------- | ---------------------------------------- | -------- | ------------- |
-| `.bx--label`                 | padding-bottom                           | 8 / 0.5  | `$spacing-03` |
-| `.bx--date-picker__input`    | height                                   | 40 / 2.5 | –             |
-| `.bx--date-picker__input`    | width                                    | 288 / 18 | –             |
-| `.bx--date-picker__input`    | padding-right, padding-left              | 16 / 1   | `$spacing-05` |
 | `.bx--date-picker__calendar` | height                                   | 336 / 21 | –             |
 | `.bx--date-picker__calendar` | width                                    | 288      | –             |
 | `.bx--date-picker__calendar` | padding-top, padding-right, padding-left | 4 / 0.25 | `$spacing-02` |
