--- a/src/pages/components/date-picker/usage.mdx
+++ b/src/pages/components/date-picker/usage.mdx
@@ -246,6 +246,18 @@ should always be aligned to the left edge of its assigned text field.
 </Column>
 </Row>
 
+### Sizes
+
+Date picker comes in three sizes: small (32px), medium (40px), and large (48px).
+
+<Row>
+<Column colLg={8}>
+
+![Size example](images/date-picker-sizes.png)
+
+</Column>
+</Row>
+
 ## Content
 
 ### Main elements
