--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -41,6 +41,14 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | `input:disabled`            | text color       | `$disabled-02` |
 | `icon:disabled`             | color            | `$disabled-02` |
 
+<Row>
+<Column colLg={8}>
+
+![Date picker input states](images/date-picker-style-6.png)
+
+</Column>
+</Row>
+
 **Active:** Placeholder text should remain when the user clicks into the text
 input and gets a cursor. Once the user starts typing the hint text is replaced
 with the user input text.
@@ -67,15 +75,13 @@ while invalid.
 | `day:hover`        | background-color | `$hover-ui`                                |
 | `day:disabled`     | text color       | `$text-02`                                 |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={12}>
 
-![Example of a date picker](images/date-picker-style-1.png)
+![Date picker calendar examples](images/date-picker-style-1.png)
 
-</div>
-
-<Caption>
-  Date picker example using both $field-02 (top) and $field-01 (bottom)
-</Caption>
+</Column>
+</Row>
 
 ## Typography
 
