--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -86,7 +86,7 @@ while invalid.
 </Row>
 
 <Caption>
-  Examplea of a single date calendar picker (left) and a date range calendar
+  Example of a single date calendar picker (left) and a date range calendar
   picker (right).
 </Caption>
 
