--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -49,7 +49,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 </Column>
 </Row>
 
-<Caption>Example of date picker input states.</Caption>
+<Caption>Examples of date picker input states</Caption>
 
 **Active:** Placeholder text should remain when the user clicks into the text
 input and gets a cursor. Once the user starts typing the hint text is replaced
