docs(dropdown): audit udpates

--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -12,19 +12,35 @@ Inputs come in two different colors. The default input color is `$field-01` and
 is used on `$ui-background` and `$ui-02` page backgrounds. The `--light` version
 input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
-| Class                             | Property         | SCSS                         |
-| --------------------------------- | ---------------- | ---------------------------- |
-| `.bx--label`                      | text color       | `$text-02`                   |
-| `.bx--dropdown`                   | background-color | `$field-01`                  |
-| `.bx--dropdown`                   | border-bottom    | `$ui-04`                     |
-| `.bx--dropdown--light`            | background-color | `$field-02`                  |
-| `.bx--dropdown-list`              | background-color | `$field-02`                  |
-| `.bx--dropdown-text`              | text color       | `$text-01`                   |
-| `:placeholder`                    | text color       | `$text-03`                   |
-| `.bx--dropdown-item`              | text color       | `$text-02`                   |
-| `.bx--dropdown__arrow`            | fill             | `$icon-01`                   |
-| `.bx--list-box__selection--multi` | background-color | `$icon-01`                   |
-| `.bx--dropdown--open`             | box-shadow       | `0 2px 6px 0 rgba(0,0,0,.2)` |
+| Class                  | Property         | SCSS        |
+| ---------------------- | ---------------- | ----------- |
+| `.bx--label`           | text color       | `$text-02`  |
+| `.bx--dropdown-text`   | text color       | `$text-01`  |
+| `:placeholder`         | text color       | `$text-03`  |
+| `.bx--dropdown`        | background-color | `$field-01` |
+| `.bx--dropdown--light` | background-color | `$field-02` |
+| `.bx--dropdown`        | border-bottom    | `$ui-04`    |
+
+| `.bx--dropdown-item` | text color | `$text-02` | | `.bx--dropdown-list` |
+background-color | `$field-02` | | `.bx--dropdown__arrow` | svg | `$icon-01` | |
+`.bx--list-box__selection--multi` | background-color | `$icon-01` | |
+`.bx--dropdown--open` | box-shadow | `0 2px 6px 0 rgba(0,0,0,.2)` |
+
+| Element               | Property         | Color token                  |
+| --------------------- | ---------------- | ---------------------------- |
+| Label                 | text color       | `$text-02`                   |
+| Input text            | text color       | `$text-01`                   |
+| Prompt text           | text color       | `$text-05`                   |
+| Input field           | background-color | `$field-01`                  |
+|                       | border-bottom    | `$ui-04`                     |
+| Input field: light    | background-color | `$field-02`                  |
+| Chevron               | svg              | `$icon-01`                   |
+| List item             | text color       | `$text-02`                   |
+|                       | background-color | `$field-01`                  |
+| Checkbox              | background-color | `$field-01`                  |
+| Checkmark             | background-color | `$field-01`                  |
+| Tag                   | background-color | `$inverse-02`                |
+| `.bx--dropdown--open` | box-shadow       | `0 2px 6px 0 rgba(0,0,0,.2)` |
 
 <div className="image--fixed">
 
