--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -12,73 +12,39 @@ Inputs come in two different colors. The default input color is `$field-01` and
 is used on `$ui-background` and `$ui-02` page backgrounds. The `--light` version
 input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
-| Class                  | Property         | SCSS        |
-| ---------------------- | ---------------- | ----------- |
-| `.bx--label`           | text color       | `$text-02`  |
-| `.bx--dropdown-text`   | text color       | `$text-01`  |
-| `:placeholder`         | text color       | `$text-03`  |
-| `.bx--dropdown`        | background-color | `$field-01` |
-| `.bx--dropdown--light` | background-color | `$field-02` |
-| `.bx--dropdown`        | border-bottom    | `$ui-04`    |
-
-| `.bx--dropdown-item` | text color | `$text-02` | | `.bx--dropdown-list` |
-background-color | `$field-02` | | `.bx--dropdown__arrow` | svg | `$icon-01` | |
-`.bx--list-box__selection--multi` | background-color | `$icon-01` | |
-`.bx--dropdown--open` | box-shadow | `0 2px 6px 0 rgba(0,0,0,.2)` |
-
-| Element               | Property         | Color token                  |
-| --------------------- | ---------------- | ---------------------------- |
-| Label                 | text color       | `$text-02`                   |
-| Input text            | text color       | `$text-01`                   |
-| Prompt text           | text color       | `$text-05`                   |
-| Input field           | background-color | `$field-01`                  |
-|                       | border-bottom    | `$ui-04`                     |
-| Input field: light    | background-color | `$field-02`                  |
-| Chevron               | svg              | `$icon-01`                   |
-| List item             | text color       | `$text-02`                   |
-|                       | background-color | `$field-01`                  |
-| Checkbox              | background-color | `$field-01`                  |
-| Checkmark             | background-color | `$field-01`                  |
-| Tag                   | background-color | `$inverse-02`                |
-| `.bx--dropdown--open` | box-shadow       | `0 2px 6px 0 rgba(0,0,0,.2)` |
-
-<div className="image--fixed">
-
-![Normal and opened dropdowns](images/dropdown-style-1.png)
-
-</div>
-
-<Caption>Example of a closed and opened dropdown</Caption>
+| Element            | Property         | Color token                  |
+| ------------------ | ---------------- | ---------------------------- |
+| Label              | text color       | `$text-02`                   |
+| Input text         | text color       | `$text-01`                   |
+| Prompt text        | text color       | `$text-05`                   |
+| Input field        | background-color | `$field-01`                  |
+|                    | border-bottom    | `$ui-04`                     |
+| Input field: light | background-color | `$field-02`                  |
+| Chevron            | svg              | `$icon-01`                   |
+| List item          | text color       | `$text-02`                   |
+|                    | background-color | `$field-01`                  |
+| Checkbox           | background-color | `$field-01`                  |
+| Tag                | background-color | `$inverse-02`                |
+| List               | box-shadow       | `0 2px 6px 0 rgba(0,0,0,.2)` |
 
 ### Interactive states
 
-| Class                                             | Property         | SCSS                 |
-| ------------------------------------------------- | ---------------- | -------------------- |
-| `:focus`                                          | border           | `$focus`             |
-| `.bx--dropdown-item:hover`                        | background-color | `$hover-ui`          |
-| `.bx--dropdown-item:hover`                        | text color       | `$text-01`           |
-| `.bx--dropdown-item--active`                      | background-color | `$selected-ui`       |
-| `.bx--dropdown--light .bx--dropdown-item:hover`   | background-color | `$hover-light-ui`    |
-| `.bx--dropdown--light .bx--dropdown-item--active` | background-color | `$selected-light-ui` |
-| `.bx--form-requirement`                           | text color       | `$support-01`        |
-| `[data-invalid]`                                  | border-bottom    | `$support-01`        |
-| `[data-invalid]`                                  | text-color       | `$text-error`        |
-| `.bx--label:disabled`                             | text color       | `$disabled-02`       |
-| `.bx--dropdown:disabled`                          | background-color | `$disabled-01`       |
-| `.bx--dropdown-text:disabled`                     | text color       | `$disabled-02`       |
-
-**Active:** Placeholder text should remain when the user clicks into the text
-input and gets a cursor. Once the user starts typing, the hint text is replaced
-with the user input text.
-
-**Helper text:** Helper text appears below the label when the input is active.
-Helper text remains visible while the input is focused and disappears after
-focus away.
-
-**Error:** Error messages appear below the input field and are always present
-while invalid.
-
-**Disabled:** Disabled state should has a `.not-allowed` cursor on hover.
+| Element          | State    | Property         | Color token          |
+| ---------------- | -------- | ---------------- | -------------------- |
+| Input field      | Focus    | border           | `$focus`             |
+| List item        | Hover    | background-color | `$hover-ui`          |
+|                  | Hover    | text color       | `$text-01`           |
+|                  | Active   | background-color | `$selected-ui`       |
+|                  | Selected | background-color | `$selected-ui`       |
+|                  | Invalid  | svg              | `$support-01`        |
+|                  | Invalid  | border-bottom    | `$support-01`        |
+|                  | Invalid  | text-color       | `$text-error`        |
+| List item: light | Hover    | background-color | `$hover-light-ui`    |
+|                  | Active   | background-color | `$selected-light-ui` |
+| Checkmark        | Selected | svg              | `$icon-01`           |
+| Label            | Disabled | text color       | `$disabled-02`       |
+| Input field      | Disabled | background-color | `$disabled-01`       |
+|                  | Disabled | text color       | `$disabled-02`       |
 
 ## Typography
 
