--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -29,22 +29,23 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 ### Interactive states
 
-| Element          | State    | Property         | Color token          |
-| ---------------- | -------- | ---------------- | -------------------- |
-| Input field      | Focus    | border           | `$focus`             |
-| List item        | Hover    | background-color | `$hover-ui`          |
-|                  | Hover    | text color       | `$text-01`           |
-|                  | Active   | background-color | `$selected-ui`       |
-|                  | Selected | background-color | `$selected-ui`       |
-|                  | Invalid  | svg              | `$support-01`        |
-|                  | Invalid  | border-bottom    | `$support-01`        |
-|                  | Invalid  | text-color       | `$text-error`        |
-| List item: light | Hover    | background-color | `$hover-light-ui`    |
-|                  | Active   | background-color | `$selected-light-ui` |
-| Checkmark        | Selected | svg              | `$icon-01`           |
-| Label            | Disabled | text color       | `$disabled-02`       |
-| Input field      | Disabled | background-color | `$disabled-01`       |
-|                  | Disabled | text color       | `$disabled-02`       |
+| Element              | State    | Property         | Color token          |
+| -------------------- | -------- | ---------------- | -------------------- |
+| **Label**            | Disabled | text color       | `$disabled-02`       |
+| **Input field**      | Focus    | border           | `$focus`             |
+|                      | Hover    | background-color | `$hover-ui`          |
+|                      | Invalid  | svg              | `$support-01`        |
+|                      | Invalid  | border-bottom    | `$support-01`        |
+|                      | Invalid  | text-color       | `$text-error`        |
+|                      | Disabled | background-color | `$disabled-01`       |
+|                      | Disabled | text color       | `$disabled-02`       |
+| **List item**        | Hover    | background-color | `$hover-ui`          |
+|                      | Hover    | text color       | `$text-01`           |
+|                      | Active   | background-color | `$selected-ui`       |
+|                      | Selected | background-color | `$selected-ui`       |
+| **List item: light** | Hover    | background-color | `$hover-light-ui`    |
+|                      | Active   | background-color | `$selected-light-ui` |
+| **Checkmark**        | Selected | svg              | `$icon-01`           |
 
 ## Typography
 
