docs: list Svelte as a communinty maintained code implementation

--- a/src/pages/all-about-carbon/how-carbon-works.mdx
+++ b/src/pages/all-about-carbon/how-carbon-works.mdx
@@ -90,6 +90,8 @@ primary maintainers:
 - [Angular](https://angular.carbondesignsystem.com/): Community maintained
 - [Vue](https://github.com/carbon-design-system/carbon-components-vue):
   Community maintained
+- [Svelte](https://github.com/ibm/carbon-components-svelte): Community
+  maintained
 
 **Design patterns are harvested from products built with Carbon.** These become
 part of the design system. Teams can use these well-defined patterns in their
