--- a/src/pages/case-studies/overview.mdx
+++ b/src/pages/case-studies/overview.mdx
@@ -7,8 +7,8 @@ description:
 
 <PageDescription>
 
-We’re developing case studies to explore the adoption and implementation of
-Carbon in products and digital experiences.
+We’re developing case studies to explore the adoption and 
+implementation of Carbon in products and digital experiences.
 
 </PageDescription>
 
