--- a/src/pages/components/UI-shell-header/style.mdx
+++ b/src/pages/components/UI-shell-header/style.mdx
@@ -84,19 +84,21 @@ Shell is from the
 
 ### Action
 
-| Class                          | Property         | Color value    |
-| ------------------------------ | ---------------- | -------------- |
-| `.bx--header__action`          | fill             | Gray 10        |
-| `.bx--header__action:hover`    | background color | Gray 100-hover |
-| `.bx--header__action:hover`    | fill             | White          |
-| `.bx--header__action:focus`    | border           | White          |
-| `.bx--header__action:active`   | background color | Gray 80        |
-| `.bx--header__action:active`   | fill             | White          |
-| `.bx--header__action:selected` | background color | Gray 100       |
-| `.bx--header__action:selected` | border           | Gray 80        |
-| `.bx--header__action:selected` | fill             | White          |
 
-<Row>
+| Class                        | Property         | Color value    |	
+| ---------------------------- | ---------------- | -------------- |	
+| `.bx--header__action`        | fill             | Gray 10        |	
+| `.bx--header__action:hover`  | background color | Gray 100-hover |	
+| `.bx--header__action:hover`  | fill             | White          |	
+| `.bx--header__action:focus`  | border           | White          |	
+| `.bx--header__action:active` | background color | Gray 80        |	
+| `.bx--header__action:active` | fill             | White          |	
+| `.bx--header__action:selected` | background color | Gray 100     |	
+| `.bx--header__action:selected` | border         | Gray 80        |	
+| `.bx--header__action:selected` | fill            | White          |	
+
+
+<Row>	<Row>
 <Column colLg={8}>
 
 ![Header action interactive states](images/header-style-8.png)
