--- a/src/pages/components/UI-shell-header/style.mdx
+++ b/src/pages/components/UI-shell-header/style.mdx
@@ -96,8 +96,7 @@ Shell is from the
 | `.bx--header__action:selected` | border         | Gray 80        |	
 | `.bx--header__action:selected` | fill            | White          |	
 
-
-<Row>	<Row>
+<Row>	
 <Column colLg={8}>
 
 ![Header action interactive states](images/header-style-8.png)
