--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -53,7 +53,7 @@ and successful in designing digital experiences and products.
 ![Alessandra Davila headshot](/images/team/davila_ale.png)
 
 </Profile>
-<Profile name="Thy Do" title="Visual designer">
+<Profile name="Thy Do" title="Visual Designer">
 
 ![Thy Do headshot](/images/team/do_thy.png)
 
