--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -88,7 +88,7 @@ and successful in designing digital experiences and products.
 ![DA Kahn headshot](/images/team/kahn_da.png)
 
 </Profile>
-<Profile name="Tracey King" title="Senior visual designer">
+<Profile name="Tracey King" title="Senior Visual Designer">
 
 ![Tracey King headshot](/images/team/king_tracey.png)
 
